--- a/index.Rmd
+++ b/index.Rmd
@@ -1,36 +1,24 @@
 --- 
-title: "A Minimal Book Example"
-author: "Yihui Xie"
+title: "Fundamentals of Mathematics and Statistics with R"
+author: "Dr. Priyanga D. Talagala"
 date: "`r Sys.Date()`"
 site: bookdown::bookdown_site
-output: bookdown::gitbook
+output: bookdown::pdf_book
 documentclass: book
 bibliography: [book.bib, packages.bib]
 biblio-style: apalike
 link-citations: yes
 github-repo: rstudio/bookdown-demo
-description: "This is a minimal example of using the bookdown package to write a book. The output format for this example is bookdown::gitbook."
+header-includes:
+- \usepackage{fancyhdr}
+- \pagestyle{fancy}
+#- \fancyhead[CO,CE]{This is fancy header}
+- \fancyfoot[CO,CE]{Prepared by Dr. Priyanga D. Talagala  (Copyright 2020 Priyanga D. Talagala)}
+- \fancyfoot[LE,RO]{\thepage}
+- \usepackage{wrapfig}
+#- \usepackage{float}
+- \usepackage{floatrow}
+- \floatplacement{figure}{H}
+- \floatplacement{table}{H}
+- \makeatletter\renewcommand*{\fps@figure}{H}\makeatother
 ---
-
-# Prerequisites
-
-This is a _sample_ book written in **Markdown**. You can use anything that Pandoc's Markdown supports, e.g., a math equation $a^2 + b^2 = c^2$.
-
-The **bookdown** package can be installed from CRAN or Github:
-
-```{r eval=FALSE}
-install.packages("bookdown")
-# or the development version
-# devtools::install_github("rstudio/bookdown")
-```
-
-Remember each Rmd file contains one and only one chapter, and a chapter is defined by the first-level heading `#`.
-
-To compile this example to PDF, you need XeLaTeX. You are recommended to install TinyTeX (which includes XeLaTeX): <https://yihui.name/tinytex/>.
-
-```{r include=FALSE}
-# automatically create a bib database for R packages
-knitr::write_bib(c(
-  .packages(), 'bookdown', 'knitr', 'rmarkdown'
-), 'packages.bib')
-```
